--- a/appsettings.json
+++ b/appsettings.json
@@ -1,17 +1,17 @@
 {
+  "AppSettings":{
+    "Token": "secret key for jwt"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-    "ConnectionStrings":{
-      "Sql_Local":"Server=localhost;Database=MoviePortal;user id=moviePortalUser;password=P@ssw0rd!"
- 
-    },
-    "AllowedHosts": "*"
-
-
-
+    }
+  },
+  "ConnectionStrings": {
+    "Sql_Local": "Server=localhost;Database=MoviePortal;user id=moviePortalUser;password=P@ssw0rd!"
+  },
+  "AllowedHosts": "*"
+  
 }
