--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -37,6 +37,7 @@
     "@angular/cli": "8.3.14",
     "@angular/compiler-cli": "8.2.12",
     "@angular/language-service": "8.2.12",
+    "@types/core-js": "^2.5.2",
     "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~12.11.6",
